--- a/liquidwar6/src/lib/nod/Makefile.in
+++ b/liquidwar6/src/lib/nod/Makefile.in
@@ -80,7 +80,7 @@ CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libnod_la_LIBADD =
 am_libnod_la_OBJECTS = nod-constinfo.lo nod-dyninfo.lo nod-info.lo \
-	nod-test.lo
+	nod-refinfo.lo nod-test.lo
 libnod_la_OBJECTS = $(am_libnod_la_OBJECTS)
 am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libnoddir)"
 PROGRAMS = $(libexec_PROGRAMS)
@@ -337,7 +337,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 noinst_LTLIBRARIES = libnod.la
-libnod_la_SOURCES = nod-constinfo.c nod-dyninfo.c nod-info.c nod-test.c
+libnod_la_SOURCES = nod-constinfo.c nod-dyninfo.c nod-info.c nod-refinfo.c nod-test.c
 libnoddir = $(includedir)/@PACKAGE_TARNAME@/nod
 libnod_HEADERS = nod.h
 @FULLSTATIC_FALSE@liquidwar6nod_test_SOURCES = nod-testmain.c
@@ -444,6 +444,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nod-constinfo.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nod-dyninfo.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nod-info.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nod-refinfo.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nod-test.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nod-testmain.Po@am__quote@
 
