Fixed script test which was long broken on make distcheck.

--- a/liquidwar6/data/Makefile.am
+++ b/liquidwar6/data/Makefile.am
@@ -20,3 +20,9 @@
 
 SUBDIRS = icon gfx snd net srv cli p2p
 
+pkgdata_DATA = README
+
+pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/data
+EXTRA_DIST = $(pkgdata_DATA)
+
+
