--- a/liquidwar6/music/Makefile.am
+++ b/liquidwar6/music/Makefile.am
@@ -18,8 +18,8 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-pkgdata_DATA = 28035-Robert_Radamant-Free_the_sounds-GNU_GPL-Dogmazic.ogg 38018-LapSuS-heav_hypnosis-GNU_GPL-Dogmazic.ogg 44213-Nighter313-Oriental_travels-GNU_GPL-Dogmazic.ogg Tim_Chadburn-7.ogg Tim_Chadburn-Vaguely_jazzy_thing.ogg
+pkgdata_DATA = 28035-Robert_Radamant-Free_the_sounds-GNU_GPL-Dogmazic.ogg 38018-LapSuS-heav_hypnosis-GNU_GPL-Dogmazic.ogg 44213-Nighter313-Oriental_travels-GNU_GPL-Dogmazic.ogg Tim_Chadburn-7.ogg Tim_Chadburn-Vaguely_jazzy_thing.ogg README
 
 pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/music
-EXTRA_DIST = $(pkgdata_DATA) README
+EXTRA_DIST = $(pkgdata_DATA)
 
