Introducing pilot dump (to be implemented).

--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -349,6 +349,7 @@ src/lib/pil/pil-bench.c
 src/lib/pil/pil-command.c
 src/lib/pil/pil-compute.c
 src/lib/pil/pil-coords.c
+src/lib/pil/pil-dump.c
 src/lib/pil/pil-localcursors.c
 src/lib/pil/pil-pilot.c
 src/lib/pil/pil-seq.c
