--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -361,6 +361,7 @@ src/lib/scm/scm-coverage.c
 src/lib/scm/scm-funcname.c
 src/lib/scm/scm-test.c
 src/lib/scm/scm-testmain.c
+src/lib/scm/scm-utils.c
 src/lib/scm/scm-wrapper.c
 src/lib/sim/sim-mask.c
 src/lib/sim/sim-print.c
