Splitted jumbo lw6-funcs.c file into one file per module.

--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -272,7 +272,25 @@ src/lib/ldr/ldr-use.c
 src/lib/lw6-callback.c
 src/lib/lw6-control.c
 src/lib/lw6-fix.c
+src/lib/lw6-funcsbot.c
 src/lib/lw6-funcs.c
+src/lib/lw6-funcscfg.c
+src/lib/lw6-funcscli.c
+src/lib/lw6-funcscns.c
+src/lib/lw6-funcsdsp.c
+src/lib/lw6-funcsgfx.c
+src/lib/lw6-funcsgui.c
+src/lib/lw6-funcshlp.c
+src/lib/lw6-funcsker.c
+src/lib/lw6-funcsldr.c
+src/lib/lw6-funcsmap.c
+src/lib/lw6-funcsnet.c
+src/lib/lw6-funcsp2p.c
+src/lib/lw6-funcspil.c
+src/lib/lw6-funcssnd.c
+src/lib/lw6-funcssrv.c
+src/lib/lw6-funcssys.c
+src/lib/lw6-funcstsk.c
 src/lib/lw6-global.c
 src/lib/lw6-main.c
 src/lib/lw6-options.c
