--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -478,6 +478,7 @@ src/lib/sys/sys-openmp.c
 src/lib/sys/sys-options.c
 src/lib/sys/sys-path.c
 src/lib/sys/sys-print.c
+src/lib/sys/sys-process.c
 src/lib/sys/sys-profiler.c
 src/lib/sys/sys-progress.c
 src/lib/sys/sys-random.c
