Trying to make Guile and Valgrind work together nicely

--- a/liquidwar6/config.h.in
+++ b/liquidwar6/config.h.in
@@ -40,6 +40,9 @@
 /* Define to 1 if you have the <fcntl.h> header file. */
 #undef HAVE_FCNTL_H
 
+/* Define to 1 if you have the <gc/gc.h> header file. */
+#undef HAVE_GC_GC_H
+
 /* Define if the GNU gettext() function is already present or preinstalled. */
 #undef HAVE_GETTEXT
 
