--- a/liquidwar6/src/lib/gfx/Makefile.am
+++ b/liquidwar6/src/lib/gfx/Makefile.am
@@ -19,10 +19,10 @@
 # Contact author        : ufoot@ufoot.org
 
 if ALLINONE
-AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @SDL_CFLAGS@
+AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ @SDL_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS@
 else
-AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@
+AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 endif
 
@@ -34,9 +34,17 @@ MOD_GL1_SUBDIR =
 MOD_GL1_LIB_S =
 endif
 
+if MOD_GLES2
+MOD_GLES2_SUBDIR = mod-gles2
+MOD_GLES2_LIB_S = mod-gles2/libmod_gles2_s.la
+else
+MOD_GLES2_SUBDIR =
+MOD_GLES2_LIB_S =
+endif
+
 if ALLINONE
 LW6DYN_LIB = 
-LW6GFX_LIB_S = $(MOD_GL1_LIB_S)
+LW6GFX_LIB_S = $(MOD_GL1_LIB_S) $(MOD_GLES2_LIB_S)
 else
 LW6DYN_LIB = ../dyn/libdyn.la 
 LW6GFX_LIB_S =
@@ -55,5 +63,5 @@ liquidwar6gfx_test_LDADD = libgfx.la $(LW6DYN_LIB) ../vox/libvox.la ../gui/libgu
 TESTS = liquidwar6gfx-test
 endif
 
-SUBDIRS = $(MOD_GL1_SUBDIR)
+SUBDIRS = $(MOD_GL1_SUBDIR) $(MOD_GLES2_SUBDIR)
 
