Fixed GLES v2 detection

--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -474,11 +474,10 @@ AC_SUBST(MOD_GL1_ENABLE_CFLAGS)
 dnl End mod-gl1
 
 dnl Begin mod-gles2
-
 AC_ARG_ENABLE([mod-gles2], AS_HELP_STRING([--enable-mod-gles2],[compile mod-gles2 default=yes]), [enable_mod_gles2=$enableval], [enable_mod_gles2=yes])
 
 AC_CHECK_HEADER(GLES2/gl2.h, HAVE_GLES2_GL2_H=1,AC_MSG_NOTICE([OpenGL ES 2 support for Liquid War 6 needs Mesa (http://www.mesa3d.org/)]),[${SDL_EXTRA}])
-AC_CHECK_LIB(GLESv2, glBegin, HAVE_LIBGLESV2=1, AC_MSG_NOTICE([OpenGL ES 2 support for Liquid War 6 needs Mesa (http://www.mesa3d.org/)]),[${SDL_EXTRA}])
+AC_CHECK_LIB(GLESv2, glCreateShader, HAVE_LIBGLESV2=1, AC_MSG_NOTICE([OpenGL ES 2 support for Liquid War 6 needs Mesa (http://www.mesa3d.org/)]),[${SDL_EXTRA}])
 
 AM_CONDITIONAL(MOD_GLES2, test x$enable_mod_gles2 = xyes && test x$SDL_CONFIG = xyes && test x$HAVE_SDL_H = x1 && test x$HAVE_LIBSDL = x1 && test x$HAVE_SDL_IMAGE_H = x1 && test x$HAVE_LIBSDL_IMAGE = x1 && test x$HAVE_SDL_TTF_H = x1 && test x$HAVE_LIBSDL_TTF = x1 && test x$HAVE_GLES2_GL2_H = x1 && test x$HAVE_LIBGLESV2 = x1)
 
