--- a/liquidwar6/src/lib/dsp/Makefile.am
+++ b/liquidwar6/src/lib/dsp/Makefile.am
@@ -19,9 +19,21 @@
 # Contact author        : ufoot@ufoot.org
 
 if ALLINONE
+if MOD_GL1
 AM_CFLAGS = @LW6_CFLAGS@ @SDL_CFLAGS@
 AM_OBJCFLAGS = @LW6_CFLAGS@ @SDL_CFLAGS@
-AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS@
+AM_LDFLAGS = @LW6_LDFLAGS@ @GL1_LIBS@ @GLU_LIBS@ @SDL_LIBS@
+else
+if MOD_GLES2
+AM_CFLAGS = @LW6_CFLAGS@ @SDL_CFLAGS@
+AM_OBJCFLAGS = @LW6_CFLAGS@ @SDL_CFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@ @GLES2_LIBS@ @SDL_LIBS@
+else
+AM_CFLAGS = @LW6_CFLAGS@
+AM_OBJCFLAGS = @LW6_CFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@
+endif
+endif
 else
 AM_CFLAGS = @LW6_CFLAGS@
 AM_OBJCFLAGS = @LW6_CFLAGS@
