--- a/liquidwar6/src/lib/gfx/mod-gl1/Makefile.am
+++ b/liquidwar6/src/lib/gfx/mod-gl1/Makefile.am
@@ -22,7 +22,7 @@ AM_CFLAGS = @LW6_CFLAGS@ @SDL_CFLAGS@
 if ALLINONE
 AM_LDFLAGS = @LW6_LDFLAGS@
 else
-AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS@
+AM_LDFLAGS = @LW6_LDFLAGS@ @GL1_LIBS@ @GLU_LIBS@ @SDL_LIBS@
 endif
 
 libdir = @libdir@/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/gfx
@@ -37,7 +37,7 @@ if !ALLINONE
 lib_LTLIBRARIES = libmod_gl1.la
 libmod_gl1_la_SOURCES = $(MOD_GL1_FILES) 
 libmod_gl1_la_LIBADD = $(MOD_GL1_LIBS) 
-libmod_gl1_la_LDFLAGS = -release @PACKAGE_VERSION@ @LW6_LDFLAGS@ @SDL_LIBS@
+libmod_gl1_la_LDFLAGS = -release @PACKAGE_VERSION@ @LW6_LDFLAGS@ @GL1_LIBS@ @GLU_LIBS@ @SDL_LIBS@
 libmod_gl1dir = $(includedir)/@PACKAGE_TARNAME@/gfx/mod-gl1
 libmod_gl1_HEADERS = mod-gl1.h
 endif
