--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -174,6 +174,7 @@ src/lib/gfx/mod-gl1/mod-gl1-backend.c
 src/lib/gfx/mod-gl1/mod-gl1-repr.c
 src/lib/gfx/mod-gl1/mod-gl1-setup.c
 src/lib/gfx/mod-gles2/mod-gles2-backend.c
+src/lib/gfx/mod-gles2/mod-gles2-path.c
 src/lib/gfx/mod-gles2/mod-gles2-repr.c
 src/lib/gfx/mod-gles2/mod-gles2-setup.c
 src/lib/glb/glb-base64.c
