--- a/liquidwar6/src/Makefile.am
+++ b/liquidwar6/src/Makefile.am
@@ -19,8 +19,18 @@
 # Contact author        : ufoot@ufoot.org
 
 if ALLINONE
+if MOD_GL1
 AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib @GUILE_CFLAGS@ @SDL_CFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@ @GL1_LIBS@ @GLU_LIBS@ @SDL_LIBS@ @SDL_LIBS_SOUND@
+else
+if MOD_GLES2
+AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib @GUILE_CFLAGS@ @SDL_CFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@ @GLES2_LIBS@ @SDL_LIBS@ @SDL_LIBS_SOUND@
+else
+AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib @GUILE_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS@ @SDL_LIBS_SOUND@
+endif
+endif
 else
 AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib @GUILE_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
