--- a/liquidwar6/src/lib/gfx/Makefile.am
+++ b/liquidwar6/src/lib/gfx/Makefile.am
@@ -19,10 +19,20 @@
 # Contact author        : ufoot@ufoot.org
 
 if ALLINONE
-AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ @SDL_CFLAGS@
-AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS@
+if MOD_GL1
+AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @SDL_CFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@ @GL1_LIBS@ @GLU_LIBS@ @SDL_LIBS@
 else
-AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@
+if MOD_GLES2
+AM_CFLAGS = @LW6_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ @SDL_CFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@ @GLES2_LIBS@ @SDL_LIBS@
+else
+AM_CFLAGS = @LW6_CFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@
+endif
+endif
+else
+AM_CFLAGS = @LW6_CFLAGS@ @MOD_GL1_ENABLE_CFLAGS@ @MOD_GLES2_ENABLE_CFLAGS@ 
 AM_LDFLAGS = @LW6_LDFLAGS@
 endif
 
