--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -370,6 +370,7 @@ src/lib/p2p/p2p-entry.c
 src/lib/p2p/p2p-explore.c
 src/lib/p2p/p2p-flush.c
 src/lib/p2p/p2p-node.c
+src/lib/p2p/p2p-queueitem.c
 src/lib/p2p/p2p-recv.c
 src/lib/p2p/p2p-srvoob.c
 src/lib/p2p/p2p-tentacle.c
